# Simply-Typed-Lambda

./: .gitignore  Config.hs  FileInterpreter.hs  Interpreter.hs  LoadFile.hs  README.md  Simply-Typed-Lambda.cabal  UnitTest.hs  UnitTest2.hs  UnitTestMonadX.hs  stack.yaml
Lambda/: Action.hs  Compiler.hs  Convertor.hs  DataType.hs  Debug.hs  Evaluator.hs  Parser.hs  Util.hs
Lambda/Compiler/: Desugar.hs  Restore.hs  ToTerm.hs  Typeof.hs
Lambda/Convertor/: Expr.hs  PatternMatch.hs  SExpr.hs  Term.hs  Type.hs  Util.hs
Lambda/DataType/: Common.hs  Expr.hs  Gadget.hs  PatternMatch.hs  SExpr.hs  Type.hs  Value.hs
Lambda/DataType/Shadow/: Expr_.hs  Gadget_.hs  PatternMatch_.hs  SExpr_.hs
Lambda/Evaluator/: Debug.hs  Def.hs  Eval.hs  GEnv.hs  IO.hs  LazyEval.hs  Meta.hs  Micro.hs  Prelude.hs
Lambda/Evaluator/Eval/: BetaReduce.hs  EvalMacro.hs  Util.hs
MonadX/: Applicative.hs  Arrow.hs  Functor.hs  Monad.hs  MonadTrans.hs
MonadX/Monad/: Error.hs  Lambda.hs  Maybe.hs  RWS.hs  Reader.hs  Reference.hs  State.hs  Writer.hs
Start/: test.hs
Start/Lib/: Micro.hs  Prelude.hs
Start/UnitTest/: EvaluationStrategy.hs  FixedPoint.hs  Macro.hs  Prelude.hs  Quote.hs  Typeof.hs
Util/: FileSystem.hs  LISP.hs
app/: FileInterpreter.hs  Interpreter.hs
src/: Config.hs
src/Lambda/: Action.hs  Compiler.hs  Convertor.hs  DataType.hs  Debug.hs  Evaluator.hs  Parser.hs  Util.hs
src/Lambda/Compiler/: Desugar.hs  Restore.hs  ToTerm.hs  Typeof.hs
src/Lambda/Convertor/: Expr.hs  PatternMatch.hs  SExpr.hs  Term.hs  Type.hs
src/Lambda/DataType/: Common.hs  Error.hs  Expr.hs  Gadget.hs  PatternMatch.hs  SExpr.hs  Type.hs  Value.hs
src/Lambda/DataType/Error/: Compile.hs  Eval.hs
src/Lambda/DataType/Shadow/: Expr_.hs  Gadget_.hs  PatternMatch_.hs  SExpr_.hs
src/Lambda/Evaluator/: Debug.hs  Def.hs  Eval.hs  IO.hs  LazyEval.hs  Meta.hs  Micro.hs  Prelude.hs
src/Lambda/Evaluator/Eval/: BetaReduce.hs  Util.hs
src/MonadX/: MonadTrans.hs
src/MonadX/Monad/: Error.hs  Maybe.hs  RWS.hs  Reader.hs  Reference.hs  State.hs  Writer.hs
src/Util/: FileSystem.hs  LISP.hs  Pseudo.hs
test/: UnitTest.hs  UnitTest2.hs  doctests.hs
